--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/kristek1104/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/kristek1104/frontend-project-46/actions)",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,10 +17,11 @@
   },
   "type": "module",
   "bin": {
-	  "gendiff": "bin/gendiff.js"
+    "gendiff": "bin/gendiff.js"
   },
   "homepage": "https://github.com/kristek1104/frontend-project-46#readme",
   "dependencies": {
-    "commander": "^10.0.0"
+    "commander": "^10.0.0",
+    "lodash": "^4.17.21"
   }
 }
