--- a/package.json
+++ b/package.json
@@ -22,6 +22,18 @@
   "homepage": "https://github.com/kristek1104/frontend-project-46#readme",
   "dependencies": {
     "commander": "^10.0.0",
+    "debug": "^4.3.4",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.5.0",
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.5.0",
+    "jest-cli": "^29.5.0",
+    "npm-check-updates": "^16.7.13",
+    "simple-git-hooks": "^2.8.1"
   }
 }
