--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
                                   cache: 'npm'
                         - name: Linting
                           run: make lint
+                        - name: Snyk check
                           uses: snyk/actions/node@master
                           env:
                                   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
